# jimp-excercises

lab1/doublebasepalindrome/: CMakeLists.txt  DoubleBasePalindrome.cpp  DoubleBasePalindrome.h  main.cpp
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  PrintMultiplicationTable.cpp  PrintMultiplicationTable.h  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: BaseScheduler.cpp  BaseScheduler.h  CMakeLists.txt  Scheduler.cpp  Scheduler.h  SchedulingItem.cpp  SchedulingItem.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  Array2d.cpp  Array2d.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: CMakeLists.txt  TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/geometry/: CMakeLists.txt  Point.cpp  Point.h  Point3D.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/: CMakeLists.txt
lab5/classs/: CMakeLists.txt  XXX.cpp  XXX.h  main.cpp
lab5/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lab5/memorychunk/: CMakeLists.txt  MemoryChunk.cpp  MemoryChunk.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab6/academia/: CMakeLists.txt  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  StudyYear.cpp  StudyYear.h  main.cpp
lab6/wordcounter/: CMakeLists.txt  Counts.cpp  Counts.h  Word.cpp  Word.h  WordCounter.cpp  WordCounter.h  main.cpp
lab6/zipper/: CMakeLists.txt  Zipper.cpp  Zipper.h  main.cpp
lab7/: CMakeLists.txt
lab7/academiaqueries/: CMakeLists.txt  StudentRepositoryQueries.cpp  StudentRepositoryQueries.h  main.cpp
lab7/arrayfill/: ArrayFill.cpp  ArrayFill.h  CMakeLists.txt  main.cpp
lab7/comparable/: CMakeLists.txt  Comparable.cpp  Comparable.h  main.cpp
lab7/iterable/: CMakeLists.txt  Enumerate.cpp  Enumerate.h  Iterable.cpp  Iterable.h  Product.cpp  Product.h  Zipper.cpp  Zipper.h  main.cpp
lab7/point3D/: CMakeLists.txt  Point3D.cpp  Point3D.h  main.cpp
lab7/point3d/: CMakeLists.txt  Point3D.cpp  Point3D.h  main.cpp
lab7/punkt3d/: CMakeLists.txt  Punkt3d.cpp  Punkt3d.h  main.cpp
lab7/rounded/: Ball.cpp  Ball.h  CMakeLists.txt  Circle.cpp  Circle.h  main.cpp
lab7/roundly/: Kolo.cpp  Kolo.h  Kula.cpp  Kula.h  main.cpp
lab7/shape/: Shape.cpp  Shape.h  main.cpp
lab8/moviesubtitles/: MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab8/pesel/: CMakeLists.txt  Pesel.cpp  Pesel.h  main.cpp
lab9/academiaserializer/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
tests/lab10test/: SchedulerTest.cpp
tests/lab11test/: CMakeLists.txt
tests/lab12test/: CMakeLists.txt  TreeTest.cpp
tests/lab13test/: ArabicToRomanTest.cpp  RomanToArabicTest.cpp
tests/lab1test/: CMakeLists.txt
tests/lab4test/: SquareTest.cpp
tests/lab6test/: ZipperTest.cpp
tests/lab7test/: ArrayFillRandomTest.cpp  CMakeLists.txt  ComparableTest.cpp
tests/lab8test/: MicroDvdCorrectCasesTest.cpp  SubRipCorrectCasesTest.cpp  SubRipErrorCasesTest.cpp
tests/lib/gtest-1.8.0/googlemock/docs/: FrequentlyAskedQuestions.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_5/: FrequentlyAskedQuestions.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_6/: FrequentlyAskedQuestions.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_7/: FrequentlyAskedQuestions.md
tests/lib/gtest-1.8.0/googletest/docs/: AdvancedGuide.md  V1_5_AdvancedGuide.md  V1_6_AdvancedGuide.md  V1_7_AdvancedGuide.md
